# ogd-to-lod

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  HACKATHON.md  README.md  ROADMAP.md  architecture.md  brainstorm.md  docker-compose.yml  pyproject.toml
.devcontainer/: Dockerfile  init-firewall.sh
.github/workflows/: push-huwise-mapping.yml  tests.yml
config/: config.yaml  pr_template.md
example/weather-binningen-hourly/: dcat.ttl  fields.txt
mapping/100046/: data.csv  mapping.yarrrml.yaml  metadata.ttl
mapping/100049/: mapping.yarrrml.yaml  metadata.ttl
mapping/100050/: mapping.yarrrml.yaml  metadata.ttl
mapping/100051/: mapping.yarrrml.yaml  metadata.ttl
mapping/100075/: data.csv  mapping.yarrrml.yaml  metadata.ttl
mapping/100078/: data.csv  mapping.yarrrml.yaml  metadata.ttl
mapping/100081/: mapping.yarrrml.yaml
mapping/100089/: data.csv  mapping.yarrrml.yaml  metadata.ttl
mapping/100093/: data.csv  mapping.yarrrml.yaml  metadata.ttl
mapping/100100/: data.csv  mapping.yarrrml.yaml  metadata.ttl
mapping/100113/: mapping.yarrrml.yaml
mapping/100170/: mapping.yarrrml.yaml
mapping/100178/: data.csv  mapping.yarrrml.yaml  metadata.ttl
mapping/100187/: data.csv  mapping.yarrrml.yaml  metadata.ttl
scripts/: integration_test.py  push-yarrrml-after-merge.sh  setup-rmlmapper.sh  setup-worktree.sh
tests/: __init__.py  conftest.py  test_ai.py  test_config.py  test_github.py  test_graph.py  test_logging.py  test_lookup.py  test_metadata.py  test_parsers.py  test_pr_template.py  test_rml.py  test_validation.py
(+101 files in other folders)
