[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ogd-to-lod"
version = "0.1.0"
description = "Tool to create RML mappings for CSV files using generative AI"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Redlink GmbH" }
]
dependencies = [
    "langgraph>=0.2.0",
    "langchain-openai>=0.2.0",
    "PyGithub>=2.1.0",
    "SPARQLWrapper>=2.0.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
]

[project.scripts]
ogd-to-lod = "ogd_to_lod.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ogd_to_lod"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: tests requiring RMLMapper JAR and Java runtime",
]
